<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/txt_PrimerValor"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_valor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/txt_SegundoValor"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="282dp"
        android:layout_height="189dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor2">

        <RadioButton
            android:id="@+id/rb_sumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb1" />

        <RadioButton
            android:id="@+id/rb_restar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb2" />

        <RadioButton
            android:id="@+id/rb_multiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb3" />

        <RadioButton
            android:id="@+id/rb_dividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb4" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:onClick="Calcular"
        android:text="@string/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="158dp"
        android:layout_height="49dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="52dp"
        android:text="@string/TextView_Resultado"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>